for the feed in the main page: - fixed bootstrap container > row > column inheritance and HTML opening and closing tags - changed negative margins into padding 5px on mobile devices

--- a/src/app/components/feed/feed.css
+++ b/src/app/components/feed/feed.css
@@ -116,8 +116,7 @@
 }
 
 @media (max-width: 990px) {
-	.feed-row {
-		margin-left: -40px;
-		margin-right: -40px;
+	.feed-column {
+		padding: 5px;
 	}
   }
